# rest-api-tests

./: .coverage  .gitignore  Procfile  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 0736298ff636_add_user.py  20e0fd8d02b0_fix_key.py  3394dd376d9e_init.py  3fe823ab9309_verification_email.py  7b204d9cccf1_fix_field_token.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: notes.py  tags.py  users.py
src/routes/: auth.py  notes.py  tags.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_main.py  test_route_auth.py  test_route_tags.py  test_unit_repository_notes.py
